Conectado ao Banco de Dados

--- a/public/cadastro-produto.html
+++ b/public/cadastro-produto.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Cadastro de Produtos</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="cadastro.css"> <!-- Reutilizaremos o CSS do outro formulário -->
+  <link rel="stylesheet" href="cadastro.css">
 </head>
 <body>
   <header>
@@ -36,7 +36,7 @@
         <select id="categoria" name="categoria" required>
             <option value="">Selecione...</option>
             <option value="pizza">Pizza Salgada</option>
-            <option value="pizzas doces">Pizza Doce</option> <!-- <-- OPÇÃO ADICIONADA -->
+            <option value="pizzas doces">Pizza Doce</option>
             <option value="bebida">Bebida</option>
             <option value="sobremesa">Sobremesa</option>
         </select>
