--- a/public/index.html
+++ b/public/index.html
@@ -8,22 +8,19 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <!-- Adicione a biblioteca de ícones Font Awesome (versão mais recente e limpa do CDN) -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
   
 <header>
-    <div class="header-content"> <!-- Adicione um container para alinhar logo e título -->
+    <div class="header-content">
       <div class="logo-container">
-        <!-- Sua logo será inserida aqui. Pode ser uma imagem <img> ou texto estilizado -->
-        <img src="test.png" alt="Logo da Pizzaria" class="logo">
-        <!-- Ou se for apenas texto: <span class="logo-text">Pizzaria</span> -->
+        <img src="gatinho.jpg" alt="Logo da Pizzaria" class="logo">
       </div>
       <h1>🍕 Cardápio da Pizzaria 🍕</h1>
     </div>
     <nav class="main-nav">
-      <a href="/cadastro.html" class="nav-link">Cadastrar Cliente</a>
+      <a href="/cadastro.html" class="nav-link">Clientes</a>
       <a href="/cadastro-produto.html" class="nav-link">Cadastrar Produto</a>
       <a href="/admin.html" class="nav-link">Painel Admin</a>
     </nav>
@@ -31,29 +28,32 @@
       🛒
       <span id="cart-count" class="cart-count">0</span>
     </div>
-  </header>
+</header>
 
 
-  <div class="filter-container">
+<div class="filter-container">
     <button class="filter-btn active" data-categoria="todos"><i class="fas fa-list-ul"></i> Mostrar Todos</button>
     <button class="filter-btn" data-categoria="pizza"><i class="fas fa-pizza-slice"></i> Pizzas Salgadas</button>
     <button class="filter-btn" data-categoria="pizzas doces"><i class="fas fa-pizza-slice"></i> Pizzas Doces</button>
     <button class="filter-btn" data-categoria="bebida"><i class="fas fa-cocktail"></i> Bebidas</button>
     <button class="filter-btn" data-categoria="sobremesa"><i class="fas fa-cookie-bite"></i> Sobremesas</button>
-  </div>
+</div>
+<div class="search-container">
+  <input type="text" id="search-input" placeholder="Pesquisar produto pelo nome...">
+</div>
 
-  <main id="menu-container">
+<main id="menu-container">
     <div class="products-section">
-      <h2>Produtos</h2>
+      <h2 id="section-title">Todos os Produtos</h2>
       <div id="products-grid-container" class="products-grid">
-        <!-- Todos os produtos serão inseridos aqui pelo JS -->
+        <!-- Produtos serão inseridos aqui pelo JS -->
       </div>
     </div>
-  </main>
+</main>
 
-  <div id="loading">Carregando cardápio...</div>
+<div id="loading">Carregando cardápio...</div>
 
-  <div id="cart-modal" class="modal">
+<div id="cart-modal" class="modal">
     <div class="modal-content">
       <span class="close-button">&times;</span>
       <h2>Meu Carrinho</h2>
@@ -83,9 +83,9 @@
         <button id="checkout-btn" class="checkout-btn">Finalizar Pedido</button>
       </div>
     </div>
-  </div>
+</div>
 
-  <div id="edit-product-modal" class="modal">
+<div id="edit-product-modal" class="modal">
     <div class="modal-content">
       <span id="close-edit-modal" class="close-button">&times;</span>
       <h2>Editar Produto</h2>
@@ -100,7 +100,7 @@
           <input type="text" id="edit-descricao" required>
         </div>
         <div class="form-group">
-          <label for="edit-preco">Preço</label>
+          <label for="edit-preco">Preço Padrão</label>
           <input type="number" step="0.01" id="edit-preco" required>
         </div>
         <div class="form-group">
@@ -112,11 +112,22 @@
               <option value="sobremesa">Sobremesa</option>
           </select>
         </div>
+        <hr>
+        <div class="form-group">
+          <label class="checkbox-label">
+            <input type="checkbox" id="edit-em-promocao">
+            Produto em promoção?
+          </label>
+        </div>
+        <div class="form-group" id="promo-price-group" style="display: none;">
+          <label for="edit-preco-promocional">Preço Promocional</label>
+          <input type="number" step="0.01" id="edit-preco-promocional">
+        </div>
         <button type="submit">Salvar Alterações</button>
       </form>
     </div>
-  </div>
+</div>
   
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
-</html>
+</html>```
