--- a/public/admin.html
+++ b/public/admin.html
@@ -48,7 +48,7 @@
     <h1>📊 Painel Administrativo 📊</h1>
     <nav class="main-nav" style="margin-top: 1rem;">
       <a href="/" class="nav-link">Voltar para o Cardápio</a>
-      <a href="/cadastro.html" class="nav-link">Gerenciar Clientes</a>
+      <a href="/gerenciar-cliente.html" class="nav-link">Gerenciar Clientes</a>
     </nav>
   </header>
 
