Update html/css - Giovana

--- a/public/admin.html
+++ b/public/admin.html
@@ -97,7 +97,7 @@
       </div>
       
       <div class="report-card">
-        <h2>Todos os Produtos Vendidos no Período</h2>
+        <h2>Todos os produtos Vendidos no Período</h2>
         <table class="report-table">
           <thead>
             <tr>
