--- a/public/login.html
+++ b/public/login.html
@@ -14,14 +14,14 @@
     <img src="gatinho.jpg" alt="Logo da Pizzaria" class="logo">
     <nav class="main-nav">
       <a href="#" id="quem-somos-btn">Quem Somos Nós?</a>
-      <a href="#contato">Contato</a>
     </nav>
   </header>
 
   <main class="login-container">
+    <h1 class="welcome-title">Bem-vindo à Pizzaria!</h1>
     <div class="login-card">
       <div id="login-view">
-        <h2>Acessar sua Conta</h2>
+        <h2>Acessar sua conta</h2>
         <form id="login-form">
           <div class="form-group">
             <label for="login-email">Email</label>
@@ -37,7 +37,7 @@
       </div>
 
       <div id="register-view" style="display: none;">
-        <h2>Crie sua Conta</h2>
+        <h2>Crie sua conta</h2>
         <form id="register-form">
           <div class="form-group"><label for="register-nome">Nome Completo</label><input type="text" id="register-nome" required></div>
           <div class="form-group"><label for="register-telefone">Telefone</label><input type="tel" id="register-telefone" required></div>
